--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,13 @@
             android:theme="@style/FullscreenTheme"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".RulesActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
